[package]
name = "parcoll"
version = "0.1.0"
edition = "2021"
description = "Collections for parallel computing, such as SPSC, SPMC, and MPSC and MPMC queues."
repository = "https://github.com/orengine/parcoll"
license = "MIT"
keywords = ["mpsc", "spmc", "spsc", "mpmc", "queue"]
categories = ["concurrency", "data-structures"]
authors = ["Eugene Usachev <https://github.com/Eugene-Usachev> and orengine contributors <team@orengine>"]

[dependencies]

[target.'cfg(parcoll_loom)'.dependencies]
loom = "0.7.2"

[features]
default = []
always_steal = []
disable_unbounded = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(parcoll_loom)'] }

[[test]]
name = "loom_tests"
path = "src/loom.rs"
required-features = ["always_steal"]