[package]
name = "parcoll"
version = "1.2.0"
edition = "2021"
description = "Collections for parallel computing, such as SPSC, SPMC, and MPSC and MPMC queues."
repository = "https://github.com/orengine/parcoll"
license = "MIT"
keywords = ["spmc", "spsc", "mpmc", "queue"]
categories = ["concurrency", "data-structures"]
authors = ["Eugene Usachev <https://github.com/Eugene-Usachev> and orengine contributors <team@orengine>"]
readme = "README.md"
rust-version = "1.83.0"

exclude = ["./images/*"]

[dependencies]
orengine-utils = ">=1.1"
light-qsbr = {  version = ">=1.0.1", optional = true }

[target.'cfg(parcoll_loom)'.dependencies]
loom = "0.7.2"

[features]
default = ["unbounded_slices_always_pow2"]
with-light-qsbr = ["light-qsbr"]
unbounded_slices_always_pow2 = []
always_steal = []
untested_memory_ordering = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(parcoll_loom)'] }

[[test]]
name = "loom_tests"
path = "src/loom.rs"
required-features = ["always_steal"]